@@ -23,6 +23,7 @@ public class CartResponse {
     // 장바구니 아이템 DTO
     @Data
     public static class CartListDTO {
+        private Integer cartId;
         private Integer itemId;
         private String itemName;
         private String itemPhotoPath;
@@ -31,9 +32,10 @@ public class CartResponse {
         private Integer totalItemPrice;
 
         public CartListDTO(Cart cart) {
+            this.cartId = cart.getId();
             this.itemId = cart.getItems().getId();
             this.itemName = cart.getItems().getName();
-            this.itemPhotoPath = cart.getItems().getPhotos().get(0).getPath();
+            this.itemPhotoPath = cart.getItems().getPhotos().getFirst().getPath();
             this.itemPrice = cart.getItems().getPrice();
             this.quantity = cart.getQuantity();
             this.totalItemPrice = itemPrice * quantity;
